--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -9,7 +9,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=none
 server.port=8080
 
-spring.kafka.bootstrap-servers=localhost:9092
+#spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.bootstrap-servers=localhost:9092,localhost:9093,localhost:9094
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 spring.kafka.producer.properties.spring.json.type.mapping=event:site.authservice.models.EventModel
@@ -22,3 +23,5 @@ spring.kafka.producer.properties.[max.in.flight.requests.per.connection]=5
 
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.ByteArrayDeserializer
 spring.kafka.producer.properties.spring.json.add.type.headers=false
+
+logging.file.name="logs/application.log"
