--- a/database-service/src/main/resources/application.properties
+++ b/database-service/src/main/resources/application.properties
@@ -9,18 +9,15 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=none
 server.port=8081
 
-spring.kafka.bootstrap-servers=localhost:9092
+#spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.bootstrap-servers=kafka-1:29092,kafka-2:29093,kafka-3:29094
 spring.kafka.consumer.group-id=database-service
-spring.kafka.consumer.auto-offset-reset=earliest
-
-spring.kafka.consumer.properties.spring.deserializer.value.delegate.class=org.springframework.kafka.support.serializer.JsonDeserializer
-spring.kafka.consumer.properties.spring.json.type.mapping=event:site.databaseservice.models.EventModel
-spring.kafka.consumer.properties.spring.deserializer.value.function.class=or
-logging.level.org.apache.kafka=DEBUG
-logging.level.org.springframework.kafka=DEBUG
+spring.kafka.consumer.auto-offset-reset=latest
 
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
-spring.kafka.consumer.properties.spring.json.trusted.packages=*
-spring.kafka.consumer.properties.spring.json.value.default.type=site.databaseservice.models.EventModel
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
+# Error handling configuration
+spring.kafka.listener.ack-mode=MANUAL_IMMEDIATE
+spring.kafka.listener.missing-topics-fatal=false
 
