--- a/history-service/src/main/resources/application.properties
+++ b/history-service/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=history-service
 server.port=8082
 
-spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=history-service
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.bootstrap-servers=localhost:9092
 spring.kafka.consumer.auto-offset-reset=earliest
 
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
